# -OpenGLNDKPrac

./: .gitignore  readme.org  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/me/opengl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  esUtil.cpp  esUtil.h  native-lib.cpp  native-lib_Cube.cpp  native-lib_Rect.cpp  native-lib_triangle.cpp
app/src/main/java/com/me/opengl/: Cube.java  CubeActivity.kt  CubeView.kt  MainActivity.kt  MainApp.kt  RectActivity.kt  RectLib.java  RectView.kt  RenderJni.kt  SimpleRenderActivity.kt  Triangle.java  TriangleActivity.kt  TriangleView.kt
app/src/main/java/com/me/opengl/drawer/: BitmapDrawer.kt  IDrawer.kt  TriangleDrawer.kt
app/src/main/java/com/me/opengl/elg/: OpenGLTools.kt  SimpleRender.kt
app/src/main/res/layout/: activity_cube.xml  activity_main.xml  activity_ndk_render.xml  activity_simple_render.xml
app/src/test/java/com/me/opengl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
